--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -558,7 +558,7 @@
 .product_title {
 	font-size: 24px;
 	margin-top: 0;
-	font-weight: normal;
+	font-weight: 500;
 	margin-bottom: 10px;
 
 	&.bundled_product_title {
