--- a/style.css
+++ b/style.css
@@ -8631,7 +8631,7 @@ header.elementor-element {
 .product_title {
   font-size: 24px;
   margin-top: 0;
-  font-weight: normal;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
