--- a/style.css
+++ b/style.css
@@ -10093,91 +10093,96 @@ header.elementor-element {
   }
 }
 
-#order_review .shop_table {
+#order_review li {
+  list-style: none;
+}
+
+.woocommerce-checkout-review-order-table {
   margin: 0;
   border: 0;
   width: 100%;
 }
 
-#order_review .shop_table th {
-  font-weight: 600;
+.woocommerce-checkout-review-order-table th {
+  white-space: nowrap;
 }
 
-#order_review .shop_table tr {
+.woocommerce-checkout-review-order-table tr {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
   border-bottom: 1px solid #ddd;
 }
 
-#order_review .shop_table tr th,
-#order_review .shop_table tr td {
+.woocommerce-checkout-review-order-table tr th,
+.woocommerce-checkout-review-order-table tr td {
   border: 0;
   padding-left: 0;
   padding-right: 0;
   display: block;
 }
 
-#order_review .shop_table tr th:last-child,
-#order_review .shop_table tr td:last-child {
+.woocommerce-checkout-review-order-table tr th:last-child,
+.woocommerce-checkout-review-order-table tr td:last-child {
   text-align: right;
 }
 
-#order_review .shop_table thead th {
+.woocommerce-checkout-review-order-table thead th {
   margin-bottom: 10px;
   text-transform: uppercase;
+  font-weight: 600;
 }
 
-#order_review .shop_table tbody tr {
+.woocommerce-checkout-review-order-table tbody tr {
   align-items: center;
 }
 
-#order_review .shop_table tbody th,
-#order_review .shop_table tbody td {
+.woocommerce-checkout-review-order-table tbody th,
+.woocommerce-checkout-review-order-table tbody td {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-#order_review .shop_table tbody th:last-child,
-#order_review .shop_table tbody td:last-child {
+.woocommerce-checkout-review-order-table tbody th:last-child,
+.woocommerce-checkout-review-order-table tbody td:last-child {
   white-space: nowrap;
   margin-left: 10px;
 }
 
-#order_review .shop_table tfoot th {
+.woocommerce-checkout-review-order-table tfoot th {
   font-size: 15px;
 }
 
-#order_review .shop_table .cart-subtotal th,
-#order_review .shop_table .cart-subtotal td {
+.woocommerce-checkout-review-order-table #shipping_method {
+  margin: 0;
+}
+
+.woocommerce-checkout-review-order-table .woocommerce-shipping-totals th {
+  padding-bottom: 5px !important;
+}
+
+.woocommerce-checkout-review-order-table .woocommerce-shipping-totals td {
+  padding-top: 5px !important;
+}
+
+.woocommerce-checkout-review-order-table .cart-subtotal th,
+.woocommerce-checkout-review-order-table .cart-subtotal td {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-#order_review .shop_table .order-total th,
-#order_review .shop_table .order-total td {
+.woocommerce-checkout-review-order-table .order-total th,
+.woocommerce-checkout-review-order-table .order-total td {
   font-size: 18px;
 }
 
-#order_review .shop_table .woocommerce-shipping-totals {
+.woocommerce-checkout-review-order-table .woocommerce-shipping-totals {
   flex-direction: column;
   padding-top: 5px;
 }
 
-#order_review .shop_table .woocommerce-shipping-totals td {
+.woocommerce-checkout-review-order-table .woocommerce-shipping-totals td {
   text-align: left !important;
-}
-
-#order_review #shipping_method {
-  margin-top: 0;
-}
-
-#order_review li {
-  list-style: none;
-}
-
-.woocommerce-checkout-review-order-table th {
-  white-space: nowrap;
 }
 
 .woocommerce-checkout-review-order-table .product-name strong {
