sub-mega-menu on mobile

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -207,6 +207,12 @@
 			position: relative;
 		}
 
+		.mega-menu-wrapper {
+			.sub-menu {
+				display: block;
+			}
+		}
+
 		.sub-mega-menu {
 			display: none;
 		}
