--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -24,6 +24,14 @@ footer#colophon {
 	}
 }
 
+@media ( max-width: 600px ) {
+	.site-footer-widget {
+		.widget_custom_html {
+			margin-bottom: 25px;
+		}
+	}
+}
+
 .footer-widget-col-1 {
 	.widget {
 		width: 100%;
