--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -140,7 +140,12 @@ $size: 40px;
 	background-color: $tr;
 	padding: 11px 15px;
 	border-radius: 2px;
+	display: none;
 	@extend .duration;
+
+	&.show {
+		display: block;
+	}
 
 	.no-sidebar &,
 	.has-elementor-location-shop-archive & {
