--- a/style.css
+++ b/style.css
@@ -7008,6 +7008,11 @@ header.elementor-element {
   background-color: rgba(0, 0, 0, 0);
   padding: 11px 15px;
   border-radius: 2px;
+  display: none;
+}
+
+#toggle-sidebar-mobile-button.show {
+  display: block;
 }
 
 .no-sidebar #toggle-sidebar-mobile-button,
