update woobuilder class name

--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -5,7 +5,7 @@ footer#colophon {
 .site-footer {
 	clear: both;
 
-	.woobuilder-page &,
+	.woobuilder-active &,
 	.edited-by-divi-builder &,
 	.elementor-page & {
 		margin-top: 0;
