--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -79,7 +79,7 @@
 	margin: 3.5em 0;
 	@extend .clearfix;
 
-	.woobuilder-page &,
+	.woobuilder-active &,
 	.elementor-page &,
 	.edited-by-divi-builder & {
 		margin: 0;
