--- a/inc/customizer/custom-controls/alpha-color-picker/css/alpha-color-picker.css
+++ b/inc/customizer/custom-controls/alpha-color-picker/css/alpha-color-picker.css
@@ -1,5 +1,5 @@
-.customize-control-woostify-color .wp-color-result span {
-	background: #f7f7f7;
+.customize-control-woostify-color .wp-picker-open+.wp-picker-input-wrap {
+	display: inline-flex;
 }
 
 .customize-control-woostify-color .woostify-color-picker-alpha.wp-color-picker {
