finish option addtocart and quickview

--- a/style.css
+++ b/style.css
@@ -4850,6 +4850,8 @@ dd {
   border-bottom: 1px solid #eaeaea;
   /* menu */
   /* search form */
+  /* Logo */
+  /* Main primary menu */
 }
 
 .site-header-inner p:empty {
@@ -4917,47 +4919,40 @@ dd {
   width: 40px;
 }
 
-/* Logo */
-.site-branding .beta.site-title {
+.site-header-inner .site-branding .beta.site-title {
   margin: 0;
   font-size: 24px;
 }
 
-.site-branding .logo {
+.site-header-inner .site-branding .logo {
   margin: 0;
 }
 
 @media (max-width: 992px) {
-  .site-branding {
+  .site-header-inner .site-branding {
     text-align: center;
   }
 }
 
-/* Main primary menu */
 @media (min-width: 992px) {
-  .main-navigation ul {
+  .site-header-inner .main-navigation ul {
     padding-left: 0;
     margin: 0;
   }
-  .main-navigation li {
+  .site-header-inner .main-navigation li {
     list-style: none;
   }
-  .main-navigation .primary-navigation {
+  .site-header-inner .main-navigation .primary-navigation {
     font-size: 0;
   }
-  .main-navigation .primary-navigation > .menu-item {
-    display: inline-flex;
-    line-height: 1;
-    align-items: center;
-  }
-  .main-navigation .primary-navigation > .menu-item > a {
+  .site-header-inner .main-navigation .primary-navigation > a {
     padding: 20px 0;
     margin: 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu {
     opacity: 0;
     visibility: hidden;
     position: absolute;
@@ -4968,30 +4963,30 @@ dd {
     text-align: left;
     z-index: -1;
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu .menu-item-has-children .menu-item-arrow {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu .menu-item-has-children .menu-item-arrow {
     transform: rotate(-90deg);
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu a {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu a {
     padding: 10px 0 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu a.tinvwl_add_to_wishlist_button, .main-navigation .primary-navigation > .menu-item .sub-menu a.woocommerce-loop-product__link, .main-navigation .primary-navigation > .menu-item .sub-menu a.loop-add-to-cart-btn {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu a.tinvwl_add_to_wishlist_button, .site-header-inner .main-navigation .primary-navigation .sub-menu a.woocommerce-loop-product__link, .site-header-inner .main-navigation .primary-navigation .sub-menu a.loop-add-to-cart-btn {
     padding: 0;
     justify-content: center;
     border-radius: 0;
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu a.tinvwl_add_to_wishlist_button:hover, .main-navigation .primary-navigation > .menu-item .sub-menu a.woocommerce-loop-product__link:hover, .main-navigation .primary-navigation > .menu-item .sub-menu a.loop-add-to-cart-btn:hover {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu a.tinvwl_add_to_wishlist_button:hover, .site-header-inner .main-navigation .primary-navigation .sub-menu a.woocommerce-loop-product__link:hover, .site-header-inner .main-navigation .primary-navigation .sub-menu a.loop-add-to-cart-btn:hover {
     background-color: transparent;
   }
-  .main-navigation .primary-navigation > .menu-item .sub-menu a:hover {
+  .site-header-inner .main-navigation .primary-navigation .sub-menu a:hover {
     background: rgba(239, 239, 239, 0.28);
   }
-  .main-navigation .primary-navigation .menu-item {
+  .site-header-inner .main-navigation .menu-item {
     position: relative;
   }
-  .main-navigation .primary-navigation .menu-item:hover > .sub-menu {
+  .site-header-inner .main-navigation .menu-item:hover > .sub-menu {
     pointer-events: auto;
     opacity: 1;
     visibility: visible;
@@ -5000,7 +4995,7 @@ dd {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
   }
-  .main-navigation .primary-navigation .sub-menu {
+  .site-header-inner .main-navigation .sub-menu {
     pointer-events: none;
     background-color: #fff;
     -webkit-box-shadow: 0 2px 8px 0 rgba(125, 122, 122, 0.2);
@@ -5011,16 +5006,16 @@ dd {
     -webkit-transform: translateY(10px);
     transform: translateY(10px);
   }
-  .main-navigation .primary-navigation .sub-menu > .menu-item > .sub-menu {
+  .site-header-inner .main-navigation .sub-menu > .menu-item > .sub-menu {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
     top: 0;
     left: 110%;
   }
-  .main-navigation .primary-navigation .sub-menu > .menu-item:hover > .sub-menu {
+  .site-header-inner .main-navigation .sub-menu > .menu-item:hover > .sub-menu {
     left: 100%;
   }
-  .main-navigation .primary-navigation .sub-menu a {
+  .site-header-inner .main-navigation .sub-menu a {
     line-height: 24px;
   }
 }
@@ -5687,14 +5682,15 @@ footer#colophon {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
   color: #fff;
   font-size: 1.2em;
   z-index: 200;
   border: 1px solid rgba(255, 255, 255, 0.3);
   visibility: hidden;
   opacity: 0;
+  padding: 10px;
   pointer-events: none;
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
