--- a/assets/css/sass/base/layout/footer.scss
+++ b/assets/css/sass/base/layout/footer.scss
@@ -140,14 +140,15 @@ footer#colophon {
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
-	width: 40px;
-	height: 40px;
+	min-width: 40px;
+	min-height: 40px;
 	color: #fff;
 	font-size: 1.2em;
 	z-index: 200;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	visibility: hidden;
 	opacity: 0;
+	padding: 10px;
 	pointer-events: none;
 	@include translatey(100%);
 	@extend .duration;
