--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -75,7 +75,7 @@
 			}
 		}
 	}
-
+}
 
 /* Logo */
 .site-branding {
@@ -107,6 +107,11 @@
 
 		.primary-navigation {
 			font-size: 0;
+
+			>.menu-item {
+				display: inline-flex;
+				line-height: 1;
+				align-items: center;
 
 				>a {
 					padding: 20px 0;
@@ -357,6 +362,10 @@
 /* Responsive */
 @media (min-width: $screen-md) {
 	.has-header-layout-1 {
+		.wrap-toggle-sidebar-menu {
+			display: none;
+		}
+
 		.site-navigation {
 			flex-grow: 1;
 			text-align: right;
@@ -371,6 +380,12 @@
 
 @media (max-width: $screen-md - 1) {
 	.header-layout-1 {
+
+		.wrap-toggle-sidebar-menu,
+		.site-tools {
+			flex: 1 1 0px;
+		}
+
 		.site-branding {
 			flex: 0 1 auto;
 		}
@@ -381,6 +396,11 @@
 		.woostify-container {
 			padding: 15px;
 			justify-content: center;
+		}
+
+		.site-navigation,
+		.site-search {
+			display: none;
 		}
 
 		.logo {
