Fix default padding in  Elementor template full width

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -80,7 +80,8 @@
 
 	.woobuilder-active &,
 	.elementor-page &,
-	.edited-by-divi-builder & {
+	.edited-by-divi-builder &,
+	.elementor-template-full-width & {
 		margin: 0;
 	}
 
