--- a/style.css
+++ b/style.css
@@ -5548,7 +5548,7 @@ footer#colophon {
 
 #scroll-to-top.scroll-to-top-position-left {
   left: 20px;
-  right: 100%;
+  right: auto;
 }
 
 /* responsive */
