--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -112,6 +112,16 @@
 		}
 	}
 
+	.primary-navigation {
+		a {
+		    line-height: 3em !important;
+		    position: relative;
+		    display: flex;
+		    justify-content: space-between;
+		    align-items: center;
+		}
+	}
+
 	// search form
 	.ajax-category-filter-box {
 		background-color: #f8f8f8;
