fix input page my-account

--- a/assets/css/sass/woocommerce/account-page.scss
+++ b/assets/css/sass/woocommerce/account-page.scss
@@ -32,13 +32,16 @@
 		}
 	}
 
-	.u-column1{
+
+	@media ( min-width: $screen-md ) {
+		.u-column1{
 		float: left;
 		width: 48%;
-	}
-	.u-column2{
-		float: right;
-		width: 48%;
+		}
+		.u-column2{
+			float: right;
+			width: 48%;
+		}
 	}
 
 	.woocommerce-form.woocommerce-form-register{
