--- a/style.css
+++ b/style.css
@@ -11362,6 +11362,62 @@ ul.products li.product .product-loop-image-wrapper .tinvwl_add_to_wishlist_butto
   padding: 0;
 }
 
+.elementor-widget-woostify-default-product-images {
+  position: relative;
+}
+
+.elementor-editor-active .elementor-widget-woostify-default-product-images .woocommerce-product-gallery,
+.elementor-editor-preview .elementor-widget-woostify-default-product-images .woocommerce-product-gallery {
+  opacity: 1 !important;
+}
+
+.elementor-widget-woostify-default-product-images ul, .elementor-widget-woostify-default-product-images ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.elementor-widget-woostify-default-product-images .onsale {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+
+.elementor-widget-woostify-default-product-images .woocommerce-product-gallery__trigger {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 2;
+  width: 20px;
+  height: 20px;
+}
+
+.elementor-widget-woostify-default-product-images .woocommerce-product-gallery__trigger img {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.elementor-widget-woostify-default-product-images .woocommerce-product-gallery__wrapper {
+  max-width: none;
+}
+
+.elementor-widget-woostify-default-product-images .flex-viewport {
+  margin-bottom: 1.5em;
+}
+
+.elementor-widget-woostify-default-product-images .flex-control-nav li {
+  display: inline-block;
+  margin: 0 1.5em 1.5em 0;
+}
+
+.elementor-widget-woostify-default-product-images .flex-control-nav img {
+  border: 1px solid transparent;
+}
+
+.elementor-widget-woostify-default-product-images .flex-control-nav img.flex-active {
+  border-color: #555;
+}
+
 body.dokan-dashboard .dokan-dash-sidebar ul.dokan-dashboard-menu li.active:after {
   left: auto;
   right: 0;
