--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -393,7 +393,7 @@ $media: 599px;
 			height: 100%;
 			margin: 0;
 			padding: 0;
-			max-width: 40px;
+			width: 40px;
 			line-height: 24px;
 			text-align: center;
 			-moz-appearance: textfield;
