my account right to left

--- a/assets/css/rtl/woocommerce/general.scss
+++ b/assets/css/rtl/woocommerce/general.scss
@@ -57,4 +57,15 @@
 			right: 30px;
 		}
 	}
+	.woocommerce-MyAccount-navigation {
+		float: right;
+	}
+	.woocommerce-MyAccount-navigation {
+		.woocommerce-MyAccount-navigation-link {
+			a:before {
+				margin-left: 15px;
+				margin-right: 0;
+			}
+		}
+	}
 }
