fix menu mobile css right to left

--- a/assets/css/rtl/layout/header.scss
+++ b/assets/css/rtl/layout/header.scss
@@ -90,4 +90,13 @@
 			}
 		}
 	}
+	@media ( max-width: 991px ) {
+		.sidebar-menu {
+			.primary-navigation {
+				> .menu-item {
+					text-align: right;
+				}
+			}
+		}
+	}
 }
